Add a test case for samba service broker
[#151415093](https://www.pivotaltracker.com/story/show/151415093)

Signed-off-by: Maria Shaldibina <mshaldibina@pivotal.io>
Signed-off-by: Kai Xiang <kxiang@pivotal.io>

--- a/ci/drats/task.yml
+++ b/ci/drats/task.yml
@@ -31,6 +31,11 @@ params:
   NFS_BROKER_USER:
   NFS_BROKER_PASSWORD:
   NFS_BROKER_URL:
+  SMB_SERVICE_NAME:
+  SMB_PLAN_NAME:
+  SMB_BROKER_USER:
+  SMB_BROKER_PASSWORD:
+  SMB_BROKER_URL:
   DELETE_AND_REDEPLOY_CF: false
 
 run:
